...
                                    <subviews>
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cLw-mZ-zNt">
                                            <rect key="frame" x="8" y="5" width="30" height="28"/>
                                            <constraints>
                                                <constraint firstAttribute="width" constant="30" id="K3b-C2-AoB"/>
                                            </constraints>
                                            <state key="normal" backgroundImage="thumbup"/>
                                            <connections>
                                                <action selector="likeButtonTapped:" destination="mog-dS-73A" eventType="touchUpInside" id="DKl-wZ-nT1"/>
                                            </connections>
                                        </button>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6SB-yo-m5f">
                                            <rect key="frame" x="46" y="5" width="66" height="28"/>
...
                                            <variation key="default">
                                                <mask key="constraints">
                                                    <exclude reference="Ita-6c-EsE"/>
                                                </mask>
                                            </variation>
                                        </imageView>
                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="add your comment here..." minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="BI1-UH-eL8">
                                            <rect key="frame" x="51" y="14" width="549" height="30"/>
                                            <constraints>
                                                <constraint firstAttribute="width" constant="549" id="L72-9E-iRJ"/>
                                            </constraints>
                                            <nil key="textColor"/>
                                            <fontDescription key="fontDescription" name="TrebuchetMS" family="Trebuchet MS" pointSize="12"/>
...
                        <nil key="title"/>
                        <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="2c5-O2-OLZ">
                            <rect key="frame" x="180" y="7" width="240" height="30"/>
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <segments>
                                <segment title="Following"/>
                                <segment title="All Channels"/>
                            </segments>
                            <connections>
                                <action selector="selectIndexChanged:" destination="bSE-5i-U3u" eventType="valueChanged" id="1gu-2a-uez"/>
                            </connections>
                        </segmentedControl>
                    </navigationItem>
...
            <point key="canvasLocation" x="-2795" y="1769"/>
        </scene>
        <!--Friends-->
        <scene sceneID="OdT-IH-eHU">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Xs4-18-aON" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Friends" image="follow" id="kud-eL-Vdd"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="BI4-H2-EZo">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
                        <connections>
                            <outlet property="dataSource" destination="ZhL-0u-Wrd" id="QRN-wP-5BE"/>
                            <outlet property="delegate" destination="ZhL-0u-Wrd" id="L0u-MS-fIi"/>
                        </connections>
                    </collectionView>
                    <navigationItem key="navigationItem" id="fXh-aZ-0Li">
                        <barButtonItem key="rightBarButtonItem" image="buttonImageSettings" id="o0g-Mn-Nqe">
                            <connections>
                                <action selector="moreOptionButtonTapped:" destination="ZhL-0u-Wrd" id="KhS-uX-6xn"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
            <point key="canvasLocation" x="-2089" y="1769"/>
        </scene>
        <!--Channels-->
        <scene sceneID="McJ-EA-IVQ">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Xk4-7P-lu8" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Channels" image="profile" id="mYs-Ne-IlR"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="bdd-Gc-Rab">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
