...
        
    }
    
    //MARK: - Action:
    
    @IBAction func moreOptionButtonTapped(sender: UIBarButtonItem) {
        let moreOptionAlert = UIAlertController(title: "Select your option", message: "", preferredStyle: .ActionSheet)
        moreOptionAlert.addAction(UIAlertAction(title: "Edit Profile", style: .Default, handler: { (_) -> Void in
            self.performSegueWithIdentifier("editProfile", sender: self)
        }))
        
        moreOptionAlert.addAction(UIAlertAction(title: "Logout", style: .Default, handler: { (_) -> Void in
            UserController.logoutCurrentUser({ (success) -> Void in
                if success {
...
