...
                    
                } else {
                    
                    dispatch_async(dispatch_get_main_queue(), { () -> Void in
                        self.followButton.setBackgroundImage(UIImage(named: "unfollowButton"), forState: .Normal)
                    })
                    self.followButton.setTitle("Follow", forState: .Normal)
                }
            })
        }
        
        if let avatar = user["avatar"] as? PFFile {
            ImageController.fetchImageAtURL(NSURL(string: avatar.url!)!, completion: { (image) -> () in
...
